--- a/package.json
+++ b/package.json
@@ -10,10 +10,25 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.4.7",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-picker/picker": "^2.11.4",
+    "@react-native/new-app-screen": "0.82.0",
+    "@react-navigation/drawer": "^7.5.10",
+    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/native-stack": "^7.3.28",
+    "@react-navigation/stack": "^7.4.10",
+    "firebase": "^12.4.0",
     "react": "19.1.1",
     "react-native": "0.82.0",
-    "@react-native/new-app-screen": "0.82.0",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-reanimated": "^4.1.3",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.17.1",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-worklets": "^0.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -37,5 +52,9 @@
   },
   "engines": {
     "node": ">=20"
+  },
+  "overrides": {
+    "semver": "7.5.4",
+    "lru-cache": "6.0.0"
   }
 }
